# FuckIt

./: CMakeLists.txt
assets/shaders/: simple.frag  simple.vert
include/gp/: Camera.hpp  Drawable.hpp  Error.hpp  Program.hpp  RC.hpp  Shader.hpp  Viewer.h  Window.hpp  glObject.hpp
include/gp/Other/: GL.h  Utils.h
src/: main.cpp
src/gp/: Camera.cpp  Error.cpp  Program.cpp  RC.cpp  Shader.cpp  Viewer.cpp  Window.cpp
